# gemma-photo-story

./: .gitignore  README.md  pyproject.toml
examples/testpics/: README.md  analysis.json  geocode-cache.json  story.md
src/gemma_photo_story/: __init__.py  cli.py  web.py
src/gemma_photo_story/web/: index.html
tests/: test_cli.py  test_web.py
