[project]
name = "gemma-photo-story"
version = "0.1.0"
description = "Turn a geotagged photo folder into a locally generated travel story with Gemma 4."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gemma-photo-story = "gemma_photo_story.cli:main"
gemma-photo-story-web = "gemma_photo_story.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_photo_story"]
